# gnmi

./: BUILD.bazel  MODULE.bazel  WORKSPACE  gnmi_deps.bzl  gnmi_go_deps.bzl  go.mod  go.sum  regenerate-files.sh
.github/workflows/: linter.yml
bazel/: BUILD.bazel  grpc_add_module_bazel.patch  grpc_adopt_bzlmod.patch  grpc_disable_layering_check.patch  grpc_python_imports.patch  tools.go
cache/: cache.go  cache_test.go
cli/: cli.go  cli_test.go
client/: cache.go  cache_test.go  client.go  client_test.go  query.go  register.go
client/gnmi/: client.go  client_test.go
cmd/gnmi_cli/: gnmi_cli.go
cmd/gnmi_collector/: gnmi_collector.go
ctree/: tree.go  tree_test.go
gnmi_ws/: gnmi.pb.go  gnmi_grpc.pb.go  gnmi_pb2.py  gnmi_pb2_grpc.py
manager/: manager.go  manager_test.go
match/: match_test.go
path/: path_test.go
proto/collector/: BUILD.bazel  collector.pb.go  collector_grpc.pb.go  collector_pb2.py  collector_pb2.pyi  collector_pb2_grpc.py
proto/gnmi/: BUILD.bazel  gnmi.pb.go  gnmi_grpc.pb.go  gnmi_pb2.pyi
proto/gnmi_ext/: BUILD.bazel  gnmi_ext.pb.go  gnmi_ext_pb2.py  gnmi_ext_pb2.pyi
subscribe/: subscribe.go  subscribe_test.go
testing/fake/gnmi/: BUILD.bazel  agent.go  client.go  gnmi_test.go
testing/fake/gnmi/cmd/fake_server/: server.go
testing/fake/gnmi/cmd/gen_fake_config/: gen_config.go
testing/fake/proto/: BUILD.bazel  fake.pb.go  fake_grpc.pb.go  fake_pb2.py  fake_pb2.pyi  fake_pb2_grpc.py
testing/fake/queue/: queue.go  queue_test.go
testing/fake/testing/tls/: tls_test.go
value/: value.go  value_test.go
