#Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# Supporting infrastructure for implementing and testing PINS.
#

load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")
load("@com_github_grpc_grpc//bazel:python_rules.bzl", "py_grpc_library", "py_proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

proto_library(
    name = "collector_proto",
    srcs = ["collector.proto"],
    import_prefix = "github.com/openconfig/gnmi",
)

cc_proto_library(
    name = "collector_cc_proto",
    deps = [":collector_proto"],
)

cc_grpc_library(
    name = "collector_cc_grpc_proto",
    srcs = [":collector_proto"],
    grpc_only = True,
    deps = [":collector_cc_proto"],
)

go_proto_library(
    name = "collector_go_proto",
    compilers = [
        "@io_bazel_rules_go//proto:go_grpc_v2",
        "@io_bazel_rules_go//proto:go_proto",
    ],
    importpath = "github.com/openconfig/gnmi/proto/collector",
    proto = ":collector_proto",
)

go_library(
    name = "collector",
    embed = [":collector_go_proto"],
)

py_proto_library(
    name = "collector_py_pb2",
    deps = [":collector_proto"],
)

py_grpc_library(
    name = "collector_py_grpc",
    srcs = [":collector_proto"],
    deps = [
        ":collector_py_pb2",
    ],
)
